cvclang/y.output
Terminals which are not used

   ASSERT
   NAMETYPE
   LSUBST
   RSUBST
   BECOMES
   LDOT
   LAMBDA
   IN
   LET
   INTR
   WITHIN


State 67 conflicts: 1 shift/reduce


Grammar

    0 $accept: defns $end

    1 defns: /* empty */
    2      | defn
    3      | NEWLINE defns
    4      | defn NEWLINE defns

    5 defn: lside EQUAL rside
    6     | CHANNEL names
    7     | CHANNEL names COLON seq_type
    8     | DATATYPE name EQUAL datatype

    9 newline0: /* empty */
   10         | NEWLINE

   11 lside: name
   12      | name OPEN exprs CLOSE

   13 rside: proc
   14      | expr_minus_name

   15 seq_type: type
   16         | type DOT seq_type

   17 type: name
   18     | set

   19 datatype: name
   20         | name PIPE datatype

   21 proc: name
   22     | proc_minus_name

   23 proc_minus_name: OPEN proc_minus_name CLOSE
   24                | name OPEN exprs CLOSE
   25                | name ARROW proc
   26                | dotted ARROW proc
   27                | proc SEMI proc
   28                | proc BOX proc
   29                | proc NDET proc
   30                | proc INTL proc
   31                | proc LCOMM setname newline0 RCOMM proc
   32                | proc LSQUARE setname PAR setname RSQUARE proc
   33                | IF cond THEN proc ELSE proc
   34                | STOP
   35                | SKIP
   36                | CHAOS OPEN set CLOSE
   37                | CHAOS OPEN name CLOSE
   38                | proc BACKSLASH setname
   39                | amb GUARD proc
   40                | NDET expr COLON setname AT proc
   41                | BOX expr COLON setname AT proc
   42                | INTL expr COLON setname AT proc
   43                | SEMI expr COLON setname AT proc
   44                | PAR expr COLON setname AT LSQUARE expr RSQUARE proc

   45 exprs: expr
   46      | exprs COMMA expr

   47 expr: name
   48     | expr_minus_name

   49 expr_minus_name: seq
   50                | bool
   51                | num
   52                | amb
   53                | tuple
   54                | set
   55                | commset
   56                | dotted

   57 dotted: name dot_seq
   58       | name COLON event_set

   59 dot_seq: DOT d_expr
   60        | PLING d_expr
   61        | QUERY d_expr
   62        | DOT d_expr dot_seq
   63        | PLING d_expr dot_seq
   64        | QUERY d_expr dot_seq

   65 event_set: set
   66          | commset
   67          | name

   68 d_expr: name
   69       | num
   70       | b_minus
   71       | set
   72       | commset
   73       | seq
   74       | tuple
   75       | amb

   76 dotteds: dotted
   77        | dotted COMMA dotted

   78 cond: bool
   79     | amb

   80 bool: b_minus
   81     | NOT expr
   82     | expr AND expr
   83     | expr OR expr
   84     | expr EQ expr
   85     | expr NE expr
   86     | expr LT expr
   87     | expr GT expr
   88     | expr LE expr
   89     | expr GE expr

   90 b_minus: CSPTRUE
   91        | CSPFALSE

   92 num: NUMBER
   93    | MINUS num_plus
   94    | HASH hash_arg
   95    | num_plus PLUS num_plus
   96    | num_plus MINUS num_plus
   97    | num_plus TIMES num_plus
   98    | num_plus SLASH num_plus
   99    | num_plus MOD num_plus

  100 num_plus: num
  101         | name
  102         | amb

  103 hash_arg: seq
  104         | set
  105         | tuple
  106         | commset
  107         | name
  108         | amb

  109 name: NAME

  110 names: name
  111      | name COMMA names

  112 tuple: OPEN expr COMMA exprs CLOSE

  113 set: LBRACE targ0 RBRACE
  114    | UNION OPEN setnames CLOSE
  115    | INTER OPEN setnames CLOSE
  116    | DIFF OPEN setname COMMA setname CLOSE

  117 setnames: setname
  118         | setname COMMA setnames

  119 setname: set
  120        | commset
  121        | name
  122        | amb

  123 commset: LPBRACE comm0 RPBRACE

  124 comm0: /* empty */
  125      | names
  126      | dotteds

  127 seq: LT targ0 GT
  128    | seqname CAT seqname
  129    | HEAD OPEN seqname CLOSE
  130    | TAIL OPEN seqname CLOSE

  131 seqname: seq
  132        | name

  133 targ0: /* empty */
  134      | targs

  135 targs: targ
  136      | targs COMMA targ

  137 targ: b_minus
  138     | num
  139     | num_name DOTDOT num_name
  140     | num_name DOTDOT
  141     | name
  142     | set
  143     | seq
  144     | tuple
  145     | dotted
  146     | amb

  147 num_name: num
  148         | name

  149 amb: OPEN expr CLOSE


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSERT (258)
NEWLINE (259) 3 4 10
STOP (260) 34
SKIP (261) 35
CHAOS (262) 36 37
NAME (263) 109
NUMBER (264) 92
CSPTRUE (265) 90
CSPFALSE (266) 91
CHANNEL (267) 6 7
DATATYPE (268) 8
NAMETYPE (269)
OPEN (270) 12 23 24 36 37 112 114 115 116 129 130 149
CLOSE (271) 12 23 24 36 37 112 114 115 116 129 130 149
LSUBST (272)
RSUBST (273)
LBRACE (274) 113
RBRACE (275) 113
LPBRACE (276) 123
RPBRACE (277) 123
EQUAL (278) 5 8
COMMA (279) 46 77 111 112 116 118 136
DOTDOT (280) 139 140
PIPE (281) 20
BECOMES (282)
UNION (283) 114
DIFF (284) 116
INTER (285) 115
HEAD (286) 129
TAIL (287) 130
ELSE (288) 33
THEN (289) 33
IF (290) 33
LDOT (291)
LAMBDA (292)
IN (293)
LET (294)
COLON (295) 7 40 41 42 43 44 58
AT (296) 40 41 42 43 44
RSQUARE (297) 32 44
PAR (298) 32 44
LSQUARE (299) 32 44
RCOMM (300) 31
LCOMM (301) 31
BACKSLASH (302) 38
INTL (303) 30 42
NDET (304) 29 40
BOX (305) 28 41
INTR (306)
SEMI (307) 27 43
GUARD (308) 39
WITHIN (309)
DOT (310) 16 59 62
OR (311) 83
AND (312) 82
NOT (313) 81
EQ (314) 84
NE (315) 85
LT (316) 86 127
LE (317) 88
GT (318) 87 127
GE (319) 89
MINUS (320) 93 96
PLUS (321) 95
MOD (322) 99
SLASH (323) 98
TIMES (324) 97
HASH (325) 94
CAT (326) 128
ARROW (327) 25 26
PLING (328) 60 63
QUERY (329) 61 64


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
defns (76)
    on left: 1 2 3 4, on right: 0 3 4
defn (77)
    on left: 5 6 7 8, on right: 2 4
newline0 (78)
    on left: 9 10, on right: 31
lside (79)
    on left: 11 12, on right: 5
rside (80)
    on left: 13 14, on right: 5
seq_type (81)
    on left: 15 16, on right: 7 16
type (82)
    on left: 17 18, on right: 15 16
datatype (83)
    on left: 19 20, on right: 8 20
proc (84)
    on left: 21 22, on right: 13 25 26 27 28 29 30 31 32 33 38 39 40
    41 42 43 44
proc_minus_name (85)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44, on right: 22 23
exprs (86)
    on left: 45 46, on right: 12 24 46 112
expr (87)
    on left: 47 48, on right: 40 41 42 43 44 45 46 81 82 83 84 85 86
    87 88 89 112 149
expr_minus_name (88)
    on left: 49 50 51 52 53 54 55 56, on right: 14 48
dotted (89)
    on left: 57 58, on right: 26 56 76 77 145
dot_seq (90)
    on left: 59 60 61 62 63 64, on right: 57 62 63 64
event_set (91)
    on left: 65 66 67, on right: 58
d_expr (92)
    on left: 68 69 70 71 72 73 74 75, on right: 59 60 61 62 63 64
dotteds (93)
    on left: 76 77, on right: 126
cond (94)
    on left: 78 79, on right: 33
bool (95)
    on left: 80 81 82 83 84 85 86 87 88 89, on right: 50 78
b_minus (96)
    on left: 90 91, on right: 70 80 137
num (97)
    on left: 92 93 94 95 96 97 98 99, on right: 51 69 100 138 147
num_plus (98)
    on left: 100 101 102, on right: 93 95 96 97 98 99
hash_arg (99)
    on left: 103 104 105 106 107 108, on right: 94
name (100)
    on left: 109, on right: 8 11 12 17 19 20 21 24 25 37 47 57 58 67
    68 101 107 110 111 121 132 141 148
names (101)
    on left: 110 111, on right: 6 7 111 125
tuple (102)
    on left: 112, on right: 53 74 105 144
set (103)
    on left: 113 114 115 116, on right: 18 36 54 65 71 104 119 142
setnames (104)
    on left: 117 118, on right: 114 115 118
setname (105)
    on left: 119 120 121 122, on right: 31 32 38 40 41 42 43 44 116
    117 118
commset (106)
    on left: 123, on right: 55 66 72 106 120
comm0 (107)
    on left: 124 125 126, on right: 123
seq (108)
    on left: 127 128 129 130, on right: 49 73 103 131 143
seqname (109)
    on left: 131 132, on right: 128 129 130
targ0 (110)
    on left: 133 134, on right: 113 127
targs (111)
    on left: 135 136, on right: 134 136
targ (112)
    on left: 137 138 139 140 141 142 143 144 145 146,
    on right: 135 136
num_name (113)
    on left: 147 148, on right: 139 140
amb (114)
    on left: 149, on right: 39 52 75 79 102 108 122 146


state 0

    0 $accept: . defns $end

    NEWLINE   shift, and go to state 1
    NAME      shift, and go to state 2
    CHANNEL   shift, and go to state 3
    DATATYPE  shift, and go to state 4

    $default  reduce using rule 1 (defns)

    defns  go to state 5
    defn   go to state 6
    lside  go to state 7
    name   go to state 8


state 1

    3 defns: NEWLINE . defns

    NEWLINE   shift, and go to state 1
    NAME      shift, and go to state 2
    CHANNEL   shift, and go to state 3
    DATATYPE  shift, and go to state 4

    $default  reduce using rule 1 (defns)

    defns  go to state 9
    defn   go to state 6
    lside  go to state 7
    name   go to state 8


state 2

  109 name: NAME .

    $default  reduce using rule 109 (name)


state 3

    6 defn: CHANNEL . names
    7     | CHANNEL . names COLON seq_type

    NAME  shift, and go to state 2

    name   go to state 10
    names  go to state 11


state 4

    8 defn: DATATYPE . name EQUAL datatype

    NAME  shift, and go to state 2

    name  go to state 12


state 5

    0 $accept: defns . $end

    $end  shift, and go to state 13


state 6

    2 defns: defn .
    4      | defn . NEWLINE defns

    NEWLINE  shift, and go to state 14

    $default  reduce using rule 2 (defns)


state 7

    5 defn: lside . EQUAL rside

    EQUAL  shift, and go to state 15


state 8

   11 lside: name .
   12      | name . OPEN exprs CLOSE

    OPEN  shift, and go to state 16

    $default  reduce using rule 11 (lside)


state 9

    3 defns: NEWLINE defns .

    $default  reduce using rule 3 (defns)


state 10

  110 names: name .
  111      | name . COMMA names

    COMMA  shift, and go to state 17

    $default  reduce using rule 110 (names)


state 11

    6 defn: CHANNEL names .
    7     | CHANNEL names . COLON seq_type

    COLON  shift, and go to state 18

    $default  reduce using rule 6 (defn)


state 12

    8 defn: DATATYPE name . EQUAL datatype

    EQUAL  shift, and go to state 19


state 13

    0 $accept: defns $end .

    $default  accept


state 14

    4 defns: defn NEWLINE . defns

    NEWLINE   shift, and go to state 1
    NAME      shift, and go to state 2
    CHANNEL   shift, and go to state 3
    DATATYPE  shift, and go to state 4

    $default  reduce using rule 1 (defns)

    defns  go to state 20
    defn   go to state 6
    lside  go to state 7
    name   go to state 8


state 15

    5 defn: lside EQUAL . rside

    STOP      shift, and go to state 21
    SKIP      shift, and go to state 22
    CHAOS     shift, and go to state 23
    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 27
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    IF        shift, and go to state 35
    PAR       shift, and go to state 36
    INTL      shift, and go to state 37
    NDET      shift, and go to state 38
    BOX       shift, and go to state 39
    SEMI      shift, and go to state 40
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    rside            go to state 45
    proc             go to state 46
    proc_minus_name  go to state 47
    expr             go to state 48
    expr_minus_name  go to state 49
    dotted           go to state 50
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 55
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 61


state 16

   12 lside: name OPEN . exprs CLOSE

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    exprs            go to state 63
    expr             go to state 64
    expr_minus_name  go to state 65
    dotted           go to state 66
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 67
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 68


state 17

  111 names: name COMMA . names

    NAME  shift, and go to state 2

    name   go to state 10
    names  go to state 69


state 18

    7 defn: CHANNEL names COLON . seq_type

    NAME    shift, and go to state 2
    LBRACE  shift, and go to state 28
    UNION   shift, and go to state 30
    DIFF    shift, and go to state 31
    INTER   shift, and go to state 32

    seq_type  go to state 70
    type      go to state 71
    name      go to state 72
    set       go to state 73


state 19

    8 defn: DATATYPE name EQUAL . datatype

    NAME  shift, and go to state 2

    datatype  go to state 74
    name      go to state 75


state 20

    4 defns: defn NEWLINE defns .

    $default  reduce using rule 4 (defns)


state 21

   34 proc_minus_name: STOP .

    $default  reduce using rule 34 (proc_minus_name)


state 22

   35 proc_minus_name: SKIP .

    $default  reduce using rule 35 (proc_minus_name)


state 23

   36 proc_minus_name: CHAOS . OPEN set CLOSE
   37                | CHAOS . OPEN name CLOSE

    OPEN  shift, and go to state 76


state 24

   92 num: NUMBER .

    $default  reduce using rule 92 (num)


state 25

   90 b_minus: CSPTRUE .

    $default  reduce using rule 90 (b_minus)


state 26

   91 b_minus: CSPFALSE .

    $default  reduce using rule 91 (b_minus)


state 27

   23 proc_minus_name: OPEN . proc_minus_name CLOSE
  112 tuple: OPEN . expr COMMA exprs CLOSE
  149 amb: OPEN . expr CLOSE

    STOP      shift, and go to state 21
    SKIP      shift, and go to state 22
    CHAOS     shift, and go to state 23
    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 27
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    IF        shift, and go to state 35
    PAR       shift, and go to state 36
    INTL      shift, and go to state 37
    NDET      shift, and go to state 38
    BOX       shift, and go to state 39
    SEMI      shift, and go to state 40
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    proc             go to state 77
    proc_minus_name  go to state 78
    expr             go to state 79
    expr_minus_name  go to state 65
    dotted           go to state 50
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 55
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 61


state 28

  113 set: LBRACE . targ0 RBRACE

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    $default  reduce using rule 133 (targ0)

    dotted    go to state 80
    b_minus   go to state 81
    num       go to state 82
    num_plus  go to state 54
    name      go to state 83
    tuple     go to state 84
    set       go to state 85
    seq       go to state 86
    seqname   go to state 60
    targ0     go to state 87
    targs     go to state 88
    targ      go to state 89
    num_name  go to state 90
    amb       go to state 91


state 29

  123 commset: LPBRACE . comm0 RPBRACE

    NAME  shift, and go to state 2

    $default  reduce using rule 124 (comm0)

    dotted   go to state 92
    dotteds  go to state 93
    name     go to state 94
    names    go to state 95
    comm0    go to state 96


state 30

  114 set: UNION . OPEN setnames CLOSE

    OPEN  shift, and go to state 97


state 31

  116 set: DIFF . OPEN setname COMMA setname CLOSE

    OPEN  shift, and go to state 98


state 32

  115 set: INTER . OPEN setnames CLOSE

    OPEN  shift, and go to state 99


state 33

  129 seq: HEAD . OPEN seqname CLOSE

    OPEN  shift, and go to state 100


state 34

  130 seq: TAIL . OPEN seqname CLOSE

    OPEN  shift, and go to state 101


state 35

   33 proc_minus_name: IF . cond THEN proc ELSE proc

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    expr             go to state 48
    expr_minus_name  go to state 65
    dotted           go to state 66
    cond             go to state 102
    bool             go to state 103
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 67
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 104


state 36

   44 proc_minus_name: PAR . expr COLON setname AT LSQUARE expr RSQUARE proc

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    expr             go to state 105
    expr_minus_name  go to state 65
    dotted           go to state 66
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 67
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 68


state 37

   42 proc_minus_name: INTL . expr COLON setname AT proc

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    expr             go to state 106
    expr_minus_name  go to state 65
    dotted           go to state 66
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 67
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 68


state 38

   40 proc_minus_name: NDET . expr COLON setname AT proc

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    expr             go to state 107
    expr_minus_name  go to state 65
    dotted           go to state 66
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 67
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 68


state 39

   41 proc_minus_name: BOX . expr COLON setname AT proc

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44

    expr             go to state 108
    expr_minus_name  go to state 65
    dotted           go to state 66
    bool             go to state 51
    b_minus          go to state 52
    num              go to state 53
    num_plus         go to state 54
    name             go to state 67
    tuple            go to state 56
    set              go to state 57
    commset          go to state 58
    seq              go to state 59
    seqname          go to state 60
    amb              go to state 68


state 40

   43 proc_minus_name: SEMI . expr COLON setname AT proc

    NAME      shift, and go to state 2
    NUMBER    shift, and go to state 24
    CSPTRUE   shift, and go to state 25
    CSPFALSE  shift, and go to state 26
    OPEN      shift, and go to state 62
    LBRACE    shift, and go to state 28
    LPBRACE   shift, and go to state 29
    UNION     shift, and go to state 30
    DIFF      shift, and go to state 31
    INTER     shift, and go to state 32
    HEAD      shift, and go to state 33
    TAIL      shift, and go to state 34
    NOT       shift, and go to state 41
    LT        shift, and go to state 42
    MINUS     shift, and go to state 43
    HASH      shift, and go to state 44
